force-app/src/objects/ffr__SummarizationTemplateFieldProcess__c.object
<CustomObject>
    <description>Stores the method by which information in a field will be aggregated.</description>
    <fields>
        <fullName>ffr__FieldName__c</fullName>
        <label>FieldName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__Process__c</fullName>
        <description>The process by which all information in this field will be aggregated.</description>
        <label>Summarization Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Group By</fullName>
                </value>
                <value>
                    <fullName>SUM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__SummarizationTemplate__c</fullName>
        <description>The summarization template to which this field mapping process belongs.</description>
        <label>Summarization Template</label>
        <referenceTo>ffr__SummarizationTemplate__c</referenceTo>
        <relationshipLabel>SummarizationTemplateFieldProcesses</relationshipLabel>
        <relationshipName>SummarizationTemplateFieldProcesses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Summarization Template Field Process</label>
    <nameField>
        <displayFormat>SFP-{000000}</displayFormat>
        <label>Summarization Template Field Process Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Summarization Template Field Processes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>